Updated Header.tsx with clickable logo for home navigation

--- a/index.html
+++ b/index.html
@@ -2,8 +2,43 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Bloom Daycare and Academy, located in Lugbe River Park Estate, Abuja, offers quality early years and primary education with a focus on intellectual, emotional, and social growth."
+    />
+    <meta
+      name="keywords"
+      content="Bloom Daycare, Academy, Lugbe, Abuja, early years, nursery, primary, education, child development, preschool, daycare"
+    />
+    <meta name="author" content="Bloom Daycare and Academy" />
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Bloom Daycare and Academy" />
+    <meta
+      property="og:description"
+      content="Quality early years and primary education in Lugbe, Abuja, fostering intellectual, emotional, and social growth."
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://bloom-daycare-website.vercel.app"
+    />
+    <meta property="og:image" content="/assets/logo.png" />
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Bloom Daycare and Academy" />
+    <meta
+      name="twitter:description"
+      content="Quality early years and primary education in Lugbe, Abuja."
+    />
+    <meta name="twitter:image" content="/assets/logo.png" />
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/assets/logo.png" />
+    <!-- Tailwind CSS CDN (for consistency, assuming Vite handles Tailwind, but included as fallback) -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
+      rel="stylesheet"
+    />
     <title>Bloom Daycare and Academy</title>
   </head>
   <body>
@@ -13,11 +48,12 @@
     <script
       id="chatbot-script"
       src="https://widget.chatbot.com/v1/widget.js"
-      data-bot-id="YOUR_BOT_ID"
+      data-bot-id="bloom-daycare-academy-2025"
       data-color="#2563EB"
       data-secondary-color="#F97316"
       data-welcome-message="Welcome to Bloom Daycare and Academy! How can I assist you today?"
-      data-avatar="https://yourdomain.com/assets/logo.png"
+      data-avatar="/assets/logo.png"
+      async
     ></script>
   </body>
 </html>
